      (Arnaud Boudou).
    * Bug #1526431 : Java script error in IE on delete (Arnaud Boudou).
    * Bug #1524048 : Session Data Gets Mangled / NoccKey and NoccIdent (Arnaud
      Boudou).
    * Bug #1524044 :  SMTP Auth Failures mishandled (Arnaud Boudou).
    * Bug #1518887 : errors when enable preferences (Arnaud Boudou).

  Patches
    * Patch #1574348 : form margin cause layout flaws in IE (Tim Gerundt).
    * Patch #1574328 : Missing parameters for htmlentities() in menu_mail.php
      (Tim Gerundt).
    * Patch #1572760 : Display structured text (Tim Gerundt).
    * Patch #1572077 : Put sort image after column title (Tim Gerundt).
    * Patch #1571741 : Colored quotes (Tim Gerundt and Arnaud Boudou).
    * Patch #1571456 : Do htmlspecialchars() after substr() (Tim Gerundt).
    * Patch #1571364 : Use title for sort images (Tim Gerundt).
    * Patch #1569369 : Use logon aliases (Tim Gerundt).
    * Patch #1566239 : Remove unnecessary table from "html/html_mail_*.php" (Tim
      Gerundt).
    * Patch #1565779 : Use <th> for mail headers too (Tim Gerundt).
    * Patch #1565759 : Use "sendData" class for mail_body in "html/send.php" too
      (Tim Gerundt).
    * Patch #1565371 : Add simple "print" CSS (Tim Gerundt).
    * Patch #1565084 : Add missing IDs to html/prefs.php (Tim Gerundt).
    * Patch #1564552 : Use <th> for table header cells (Tim Gerundt).
    * Patch #1563453 : Use <label> for send.php (Tim Gerundt).
    * Patch #1537220 : LANG and THEME may change also pop users (Vadim).

  Feature Requests
    * RFE #1227895 : Address Translation (Tim Gerundt).

  Misc
    * Improve RSS handling (Arnaud Boudou).
    * Add mail controls (delete, select all, etc.) to the bottom of the INBOX
      page (Arnaud Boudou).
    * Improve remote pictures handling (Arnaud Boudou).

NOCC 1.2    July 01, 2006

    * Add lang and theme choice to preferences section (Arnaud Boudou).
    * Disable distant pictures display by default (Arnaud Boudou).