@@ -23,6 +23,8 @@ NOCC 1.3    ?? ??, 200?
     * Bug #1518887 : errors when enable preferences (Arnaud Boudou).
 
   Patches
+    * Patch #1574359 : Use <label> for $reapply_filters in html_top_table.php
+      (Tim Gerundt).
     * Patch #1574348 : form margin cause layout flaws in IE (Tim Gerundt).
     * Patch #1574328 : Missing parameters for htmlentities() in menu_mail.php
       (Tim Gerundt).
